Rewrite dining parser in TypeScript (#21)
* Initialize new parser

* Fix bug in date parser

* Make number checking stricter

* Implemented more of the builder logic

* Implement page parsing logic

* Reorganize into src

* Implement times and online order checking

* Complete basic implementation of parser without specials

* Implement specials and soups

* Update Server to TS

* Remove luxon

* Update API version to 2.4.0

* Update deployment

* Fix incorrect field name for specials and soups

* Remove test file

* Remove explicity getter function in ParsedTime classes

* Remove unnecessary getter

* Add high-level comments for each class

* Remove unnecessary dataType variable
